# lazyspeak.nvim

./: .gitignore  CHANGELOG.md  Cargo.toml  Justfile  README.md  SECURITY.md  SPEC.md  sr.yaml  teasr.toml
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: ci.yml  release.yml
crates/lazyspeak/: Cargo.toml  README.md
crates/lazyspeak-cli/: Cargo.toml
crates/lazyspeak-cli/src/: main.rs
crates/lazyspeak-core/: Cargo.toml
crates/lazyspeak-core/src/: audio.rs  lib.rs  protocol.rs  transcribe.rs
crates/lazyspeak-core/src/transcribe/: http.rs  mod.rs  onnx.rs
crates/lazyspeak/src/: audio.rs  lib.rs  main.rs  protocol.rs
crates/lazyspeak/src/pipeline/: filter.rs  mod.rs  sink.rs  source.rs  transform.rs
crates/lazyspeak/src/transcribe/: mod.rs
docs/: roadmap.md
lua/lazyspeak/: core.lua  health.lua  init.lua  install.lua  snapshot.lua  ui.lua  voice.lua
lua/lazyspeak/adapters/: acp.lua  claudecode.lua
plugin/: lazyspeak.vim
scripts/: convert_model.py
