[workspace]
resolver = "2"
members = ["crates/lazyspeak-core", "crates/lazyspeak"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/urmzd/lazyspeak.nvim"

[workspace.dependencies]
lazyspeak-core = { path = "crates/lazyspeak-core", version = "0.1.0" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
