[workspace]
resolver = "2"
members = ["crates/lazyspeak"]

[workspace.package]
version = "0.4.1"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/urmzd/lazyspeak.nvim"

[workspace.dependencies]
streamsafe = { version = "0.2", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
