[package]
name = "lazyspeak-cli"
description = "CLI daemon for lazyspeak.nvim — voice-driven coding"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "lazyspeak"
path = "src/main.rs"

[dependencies]
lazyspeak-core.workspace = true
serde_json.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
