[package]
name = "lazyspeak-core"
description = "Voice capture, VAD, and STT for lazyspeak.nvim"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
cpal = "0.15"
reqwest = { version = "0.12", features = ["json", "multipart", "blocking"] }
base64 = "0.22"
hound = "3.5"
