[package]
name = "lazyspeak-core"
description = "Voice capture, VAD, and STT for lazyspeak.nvim"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["http", "onnx"]
http = ["dep:reqwest", "dep:base64", "dep:hound"]
onnx = ["dep:ort", "dep:ndarray", "dep:rustfft", "dep:tokenizers", "dep:shellexpand"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
cpal = "0.15"

# http backend
reqwest = { version = "0.12", features = ["json", "multipart", "blocking"], optional = true }
base64 = { version = "0.22", optional = true }
hound = { version = "3.5", optional = true }

# onnx backend
ort = { version = "2.0.0-rc.12", features = ["download-binaries"], optional = true }
ndarray = { version = "0.17", optional = true }
rustfft = { version = "6", optional = true }
tokenizers = { version = "0.21", optional = true }
shellexpand = { version = "3", optional = true }
