[package]
name = "lazyspeak-core"
description = "Voice capture, VAD, and STT for lazyspeak.nvim"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["http"]
http = ["dep:reqwest", "dep:base64", "dep:hound"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
cpal = "0.15"

# http backend (llama-server, vLLM, etc.)
reqwest = { version = "0.12", features = ["json", "multipart", "blocking"], optional = true }
base64 = { version = "0.22", optional = true }
hound = { version = "3.5", optional = true }
