[package]
name = "lazyspeak"
description = "CLI daemon for lazyspeak.nvim — voice-driven coding"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["http", "onnx"]
http = ["lazyspeak-core/http"]
onnx = ["lazyspeak-core/onnx", "dep:shellexpand"]

[dependencies]
lazyspeak-core.workspace = true
serde_json.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
shellexpand = { version = "3", optional = true }
