[package]
name = "lazyspeak"
description = "CLI daemon for lazyspeak.nvim — voice-driven coding"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["http"]
http = ["dep:reqwest", "dep:base64", "dep:hound"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-util.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
streamsafe.workspace = true
cpal = "0.15"

# http backend (llama-server, vLLM, etc.)
reqwest = { version = "0.12", features = ["json", "multipart", "blocking"], optional = true }
base64 = { version = "0.22", optional = true }
hound = { version = "3.5", optional = true }
